Fixed align attribute in td tag

--- a/css/p2.css
+++ b/css/p2.css
@@ -27,6 +27,7 @@ td {
     font-size: 11pt;
     padding: 3px
 }
+
 .leftTD {
     width: 60%;
 }
@@ -34,6 +35,7 @@ td {
 .rightTD {
     width: 40%;
 }
+
 ol {
     margin-left: 0px;
     font-size: 14pt;
@@ -60,6 +62,10 @@ li {
 .rightTD > .attention {
     text-align: left;
     margin-left: 5px;
+}
+
+.buttonTD {
+    text-align: center;
 }
 
 .note {
